<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/General"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_general_conditions"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/PriceMeterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPriceMeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_meter_price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/PriceMeter"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="3000"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/WallHeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWallHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_height"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/WallHeight"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="3"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/WallAxisXLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWallAxisX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_axis_x"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/WallAxisX"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="6"
                android:inputType="numberSigned|number|numberDecimal"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/NumberWallAxisXLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNumberWallAxisX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_number_walls_x"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/NumberWallAxisX"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/WallAxisYLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWallAxisY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_axis_y"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/WallAxisY"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="6"
                android:inputType="numberSigned|numberDecimal"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/NumberWallAxisYLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNumberWallAxisY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_number_walls_y"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/NumberWallAxisY"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Additional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/General">

        <TextView
            android:id="@+id/textAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_advanced_conditions"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/NumberGableAxisXLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNumberGableAxisX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_number_gable_x"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/NumberGableAxisX"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/NumberGableAxisYLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNumberGableAxisY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input_number_gable_y"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/NumberGableAxisY"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/NumberGableAxisYLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSummaryPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/white"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/view_total_price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/SummaryPrice"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:onClick="calculatePrice"
        android:text="@string/view_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Additional" />
</androidx.constraintlayout.widget.ConstraintLayout>